--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@iroha2/client": "^7.0.0",
+    "@iroha2/crypto-core": "^1.1.1",
+    "@iroha2/crypto-target-bundler": "^1.1.1",
+    "@iroha2/crypto-target-node": "^1.1.1",
+    "@iroha2/crypto-target-web": "^1.1.1",
+    "@iroha2/data-model": "^7.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "hada": "^0.0.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
