--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.3",
+    "@grpc/proto-loader": "^0.7.10",
     "@iroha2/client": "^7.0.0",
     "@iroha2/crypto-core": "^1.1.1",
     "@iroha2/crypto-target-bundler": "^1.1.1",
@@ -29,6 +31,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.4",
     "@nestjs/platform-express": "^10.0.0",
     "hada": "^0.0.9",
     "reflect-metadata": "^0.2.0",
