--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "hada": "^0.0.9",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "undici": "^6.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
